--- a/views/_partial/_user/score.ejs
+++ b/views/_partial/_user/score.ejs
@@ -85,6 +85,11 @@
 	columnsum['Fin.'] = 0;
 %>
 
+<ul>
+	<li><i class="fa fa-calendar-check-o"></i> = 特殊事由請假，不列入學期成績。$\text{學期成績 Fin} = \frac{\text{學期總分 108}}{\text{有效考試場數 N}} \times \frac{累計考試總分 S}{小考滿分 100}$</li>
+	<li><i class="fa fa-times"></i> = 沒有成績，該場考試為有效，成績以零分計算。</li>
+</ul>
+
 <div style="overflow: auto; max-height: 750px;">
 <table class="pure-table pure-table-bordered" style='width: 100%;' id="grade-table">
 	<thead>
