--- a/views/_partial/after-footer.ejs
+++ b/views/_partial/after-footer.ejs
@@ -1,8 +1,7 @@
 <!-- -->
 
 <% 
-    var forbiddenLayoutList = ['login', 'edit', 'register', 'user', 
-    'score', 'ranklist'];
+    var forbiddenLayoutList = ['login', 'edit', 'register', 'user', 'ranklist'];
     var MathJaxScriptNeed = forbiddenLayoutList.indexOf(layout) == -1;
     console.log(MathJaxScriptNeed);
 %>
