--- a/views/_partial/_submission/livesubmission.ejs
+++ b/views/_partial/_submission/livesubmission.ejs
@@ -146,7 +146,7 @@
 				}
 				text += "<a href='user/" + submit_list[i].uid + "'>" + submit_list[i].lgn + "</td>";
 				text += "<td class='status' data-res=" + submit_list[i].res + " data-sid=" + submit_list[i].sid + ">";
-				text += "<a href='detail/" + submit_list[i].sid + "'><span class='result" + submit_list[i].res + "'>" + options.restext[(submit_list[i].res+options.restext.length)%options.restext.length] + "</span>";
+				text += "<span class='result" + submit_list[i].res + "'>" + options.restext[(submit_list[i].res+options.restext.length)%options.restext.length] + "</span>";
 				if (submit_list[i].res != 0 && submit_list[i].res != 1 && submit_list[i].res != 8) {
 					text += " (";
 					if (submit_list[i].res != 7) {
@@ -158,7 +158,6 @@
 					}
 					text += ")";
 				}
-				text += "</a>";
 				if (submit_list[i].res == 0 || submit_list[i].res == 8)
 					text += ' <i class="fa fa-spinner fa-pulse"></i>';
 				text += '</td>';
