--- a/views/error.ejs
+++ b/views/error.ejs
@@ -24,7 +24,7 @@
       <%- include('_partial/mobile-nav') %>
     </div>
     <%- include('_partial/footer') %>
-    <%- include('_partial/after-footer') %>
+    <%- include('_partial/after-footer', {layout: 'error'}) %>
   </div>
 </body>
 </html>
