--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -31,7 +31,7 @@ var judge_res = site.JUDGE.result_message,
 var unitConvert = site.unitConvert;
 %>
 <div class="pure-g">
-	<div class="pure-u-2-3">
+	<div class="pure-u-1 pure-u-lg-2-3">
 	<h2 class="content-subhead">Submit</h2>
 <% if( canSubmit ) { %>
 	<form class="pure-form  pure-form-aligned" action="/submit" method="post" enctype="multipart/form-data" id="submit_form">
@@ -77,7 +77,7 @@ var unitConvert = site.unitConvert;
 	<a class="button-success pure-button" href="/login"><i class="fa fa-sign-in"></i> <%= __('Login') %></a>
 <% } %>
 	</div>
-	<div class="pure-u-1-3">
+	<div class="pure-u-1 pure-u-lg-1-3">
 		<h2 class="content-subhead">Testdata Set</h2>
     	<div class="pure-menu">
 		    <ul class="pure-menu-list">
