--- a/views/_partial/head.ejs
+++ b/views/_partial/head.ejs
@@ -53,7 +53,7 @@
 
 	            <ul class="pure-menu-list">
 	                <li class="pure-menu-item"><a href="/archive" class="pure-menu-link"><i class="fa fa-archive"></i> <%= __('Archive') %></a></li>
-	                <li class="pure-menu-item"><a href="/problems" class="pure-menu-link"><i class="fa fa-list-alt"></i> <%= __('Problems') %></a></li>
+	                <li class="pure-menu-item"><a href="/problems/domains" class="pure-menu-link"><i class="fa fa-list-alt"></i> <%= __('Problems') %></a></li>
 	                <li class="pure-menu-item"><a href="/live" class="pure-menu-link"><i class="fa fa-circle"></i> <%= __('Live') %></a></li>
 	                <li class="pure-menu-item"><a href="/ranklist" class="pure-menu-link"><i class="fa fa-trophy"></i> <%= __('Rank') %></a></li>
 	                <li class="pure-menu-item"><a href="/contests" class="pure-menu-link"><i class="fa fa-flag"></i> <%= __('Contest') %></a></li>
