--- a/public/stylesheets/pure-release-0.6.0/slide-menu.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu.css
@@ -726,3 +726,51 @@ Hides the menu at `48em`, but modify this based on your app's needs.
   text-align: center;
   background: #f0f0f0;
 }
+/*
+ * -- PRICING TABLE HEADER --
+ * By default, a header is black/white, and has some styles for its <h2> name.
+ */
+
+.pricing-tables {
+  text-align: center;
+}
+.pricing-table-header {
+}
+
+.pricing-table-header h2 {
+    margin: 0;
+    padding-top: 1em;
+    font-size: 1em;
+    font-weight: normal;
+}
+
+/*
+ * -- PRICING TABLE PRICE --
+ * Styles for the price and the corresponding <span>per month</span>
+ */
+
+.pricing-table-price {
+    font-size: 2em;
+    margin: 0.2em 0 0;
+    font-weight: 100;
+}
+
+.pricing-table-price span {
+    display: block;
+    text-transform: uppercase;
+    font-size: 0.2em;
+    padding-bottom: 2em;
+    font-weight: 400;
+}
+
+.pricing-table-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+.pricing-table-list li {
+    padding: 0.8em 0;
+    background: #f7f7f7;
+    border-bottom: 1px solid #e7e7e7;
+}
