--- a/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
@@ -801,3 +801,8 @@ abbr[title] {
     background: #252423;
     border-bottom: 1px solid #e7e7e7;
 }
+/*
+ */
+.custom-mf-title {
+    font-family: verdana;
+}
