--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -98,3 +98,18 @@ var unitConvert = site.unitConvert;
 
 
 </div>
+
+<script src="/javascripts/clipboard/clipboard.min.js"></script>
+
+<script>
+new Clipboard(".fw-code-copy-button", {
+  text: function(trigger) {
+  	var $rows = $(trigger).next().find('.code').find('.line');
+  	var rowDelim = '\n';
+  	return '' + $rows.map(function(i, row) {
+  		var $row = $(row);
+  		return $row.text().replace(/\s/g, " ");
+  	}).get().join(rowDelim);
+  }
+});
+</script>
