--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -1,3 +1,12 @@
+<% 
+	var pid = pinfo.pid,
+		ttl = pinfo.ttl,
+		uid = user["uid"];
+	var judge_res = site.JUDGE.result_message,
+    	judge_lng = site.JUDGE.lang,
+    	judge_compiler_arg = site.JUDGE.compiler_arg;
+	var unitConvert = site.unitConvert;
+%>
 <link rel="stylesheet" type="text/css" href="/stylesheets/shThemeDefault.css" />
 <div class="header">
 	<h1 class='article-title'><%- pid + ". " + ttl %></h1>
@@ -8,7 +17,7 @@
 <div class="pure-menu pure-menu-horizontal">
 
 <ul class="pure-menu-list">
-<% if (uid != undefined) { %>
+<% if (user["uid"]) { %>
 	<li class="pure-menu-item"><a class="pure-menu-link" href='/submissions?pid=<%- pid %>&uid=<%- uid %>'><%= __('My Status') %></a></li>
 <% } %>
 	<li class="pure-menu-item"><a class="pure-menu-link" href='/submissions?pid=<%- pid %>'><%= __('Status') %></a></li>
@@ -24,12 +33,6 @@
 
 <%- problem_content %>
 
-<%
-var judge_res = site.JUDGE.result_message,
-    judge_lng = site.JUDGE.lang,
-    judge_compiler_arg = site.JUDGE.compiler_arg;
-var unitConvert = site.unitConvert;
-%>
 <div class="pure-g">
 	<div class="pure-u-1 pure-u-lg-2-3">
 	<h2 class="content-subhead">Submit</h2>
