Fixed Ajax path

--- a/views/_partial/_problem/problem-domain.ejs
+++ b/views/_partial/_problem/problem-domain.ejs
@@ -176,7 +176,7 @@
     	}
     }
     $.jhunt.defaults = {
-        ip: '<%- site.HOST.IP %>',
+        ip: '<%- request_hostname %>',
         reloadtime: 2000,		// 	how time to load 
         reloadsubmit: 5,
         loadsubmit: 20,		//	how #submission to load
